--- a/WOTC_MoreResistanceLeader/Config/XComMRL.ini
+++ b/WOTC_MoreResistanceLeader/Config/XComMRL.ini
@@ -1,15 +1,63 @@
 [WOTC_MoreResistanceLeader.X2DownloadableContentInfo_WOTC_MoreResistanceLeader]
 
 ; Possible values for `MinComInt`
-	; eComInt_Standard,
-	; eComInt_AboveAverage,
-	; eComInt_Gifted,
-	; eComInt_Genius,
-	; eComInt_Savant,
+    ; eComInt_Standard,
+    ; eComInt_AboveAverage,
+    ; eComInt_Gifted,
+    ; eComInt_Genius,
+    ; eComInt_Savant,
 
-; You can have more than one line here. The chain will trigger for soldier class that has not met the barracks limit defined in `Limit`
-+RescueClasses = (ClassName = "WOTC_APA_DirectorKelly", Limit = 2, MinComInt = eComInt_Genius)
-
-; Added support to recruit characters other than `Soldier` like `ViperSoldier`. Here is a sample of how to do it.
-; If `CharacterTemplateName` is not specified, the mod will default it to `Soldier`
-; +RescueClasses = (CharacterTemplateName = "ViperSoldier", ClassName = "SomeClass", Limit = 2, MinComInt = eComInt_Genius)
++RescueClasses = (ClassName = "WOTC_APA_DirectorKelly", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "RustyPsionic", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "XGT_Support", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "XGT_Vanguard", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "XGT_Heavy", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "XGT_Sniper", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "XGT_Scout", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "SKV_Squadleader", Limit = 5, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "WoTC_Fixer", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "MechanicWOTC", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "GreaterEliteSoldier", ClassName = "RM_Elite", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "SparkSoldier", ClassName = "Spark", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "Keeper", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "Stormrider", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "WoTC_Framed", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "RM_HybridSoldier", ClassName = "MZPatchwork", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "MZPatchwork", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "RustyAlchemist", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "WOTC_APA_Specialist", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "WOTC_APA_Sapper", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "WOTC_APA_Marksman", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_FrostDroid", ClassName = "BU_FrostDroidClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "WOTC_APA_Marine", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "WOTC_APA_Medic", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "WOTC_APA_Assault", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "WOTC_APA_FlameAssault", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "MZNightblade", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "MZButterfly", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "F_Pharmacist", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "WoTC_Forged", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "ShadowOps_CombatEngineer_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "ShadowOps_Dragoon_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "ShadowOps_Hunter_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "ShadowOps_Infantry_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "RM_HybridSoldier", ClassName = "ShadowOps_Dragoon_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "RM_HybridSoldier", ClassName = "ShadowOps_Scrapper_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "RM_HybridSoldier", ClassName = "ShadowOps_Infantry_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "RM_HybridSoldier", ClassName = "ShadowOps_Survivalist_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "ShadowOps_Juggernaut_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "ShadowOps_Recon_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "ShadowOps_Scrapper_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (ClassName = "ShadowOps_Survivalist_LW2", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "LesserEliteSoldier", ClassName = "EliteRookie", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_ResistanceMec", ClassName = "BU_ResistanceMecClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_MecArcher", ClassName = "BU_MecArcherClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_MecPyroclast", ClassName = "BU_MecPyroclastClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_JunkSpark", ClassName = "BU_JunkSparkClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_AdventDrone", ClassName = "BU_AdventDroneClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_HunterDrone", ClassName = "BU_HunterDroneClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_EnigmaDrone", ClassName = "BU_EnigmaDroneClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_PhaseDrone", ClassName = "BU_PhaseDroneClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_FrostMec", ClassName = "BU_FrostMecClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_PrototypeGatlingMec", ClassName = "BU_PrototypeGatlingMecClass", Limit = 1, MinComInt = eComInt_Standard)
++RescueClasses = (CharacterTemplateName = "BU_MilitaryGatlingMec", ClassName = "BU_MilitaryGatlingMecClass", Limit = 1, MinComInt = eComInt_Standard)
